WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29526
Fix stack alignment with ARM THUMB2 JIT.
https://bugs.webkit.org/show_bug.cgi?id=29526
Summary
Fix stack alignment with ARM THUMB2 JIT.
Gavin Barraclough
Reported
2009-09-19 20:29:13 PDT
Stack is currently being decremented by 0x3c, bump this to 0x40 to make this a multiple of 16 bytes.
Attachments
The patch
(2.64 KB, patch)
2009-09-19 20:33 PDT
,
Gavin Barraclough
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gavin Barraclough
Comment 1
2009-09-19 20:33:19 PDT
Created
attachment 39831
[details]
The patch
Gavin Barraclough
Comment 2
2009-09-21 00:37:32 PDT
Sending JavaScriptCore/ChangeLog Sending JavaScriptCore/jit/JITStubs.cpp Sending JavaScriptCore/jit/JITStubs.h Transmitting file data ... Committed revision 48574.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug