Fix stack alignment with ARM THUMB2 JIT. https://bugs.webkit.org/show_bug.cgi?id=29526

Patch by Gavin Barraclough <barraclough@apple.com> on 2009-09-19
Reviewed by Sam 'Cabin Boy' Weinig.

Stack is currently being decremented by 0x3c, bump this to 0x40 to make this a
multiple of 16 bytes.

* jit/JITStubs.cpp:
(JSC::JITThunks::JITThunks):
* jit/JITStubs.h:



git-svn-id: svn://svn.chromium.org/blink/trunk@48574 bbb929c8-8fbe-4397-9dbb-9b2b20218538