third_party/WebKit/JavaScriptCore/jit/JITStubs.h
@@ -150,6 +150,8 @@ namespace JSC {
         CallFrame* callFrame;
         JSValue* exception;
 
+        void* padding2;
+
         // These arguments passed on the stack.
         Profiler** enabledProfilerReference;
         JSGlobalData* globalData;
